Feat: adding css to the page:

--- a/circle-text-curser.html
+++ b/circle-text-curser.html
@@ -9,14 +9,13 @@
 
     <title>Circle Text Effect</title>
 
+    <link rel="stylesheet" type="text/css"  href="css/circle-courser-text.css" />
 
 </head>
 <body>
 <div class="text-box">
     <h1 class="text">Some-Circle-Text!</h1>
 </div>
-
-
 
 </body>
 </html>
