Feat: adding java function to the page.

--- a/circle-text-curser.html
+++ b/circle-text-curser.html
@@ -9,7 +9,7 @@
 
     <title>Circle Text Effect</title>
 
-    <link rel="stylesheet" type="text/css"  href="css/circle-courser-text.css" />
+    <link rel="stylesheet" type="text/css"  href="css/circle-cursor-text.css" />
 
 </head>
 <body>
@@ -17,5 +17,6 @@
     <h1 class="text">Some-Circle-Text!</h1>
 </div>
 
+<script src="js/circle-text-cursor.js"></script>
 </body>
 </html>
