Feat: changing the text

--- a/circle-text-curser.html
+++ b/circle-text-curser.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="text-box">
-    <h1 class="text">Some-Circle-Text!</h1>
+    <h1 class="text">Move-Mouse-Around!</h1>
 </div>
 
 <script src="js/circle-text-cursor.js"></script>
