--- a/multiple-text-typing-animation.html
+++ b/multiple-text-typing-animation.html
@@ -12,6 +12,7 @@
             <li><span>Musician</span></li>
             <li><span>Programmer</span></li>
             <li><span>Gamer</span></li>
+            <li><span>FreeLancer</span></li>
         </ul>
     </div>
 </body>
