Feat: adding a square to match the boxes

--- a/numbers-game.html
+++ b/numbers-game.html
@@ -20,6 +20,11 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="title">2</div>
     </div>
 
 <script src="js/numbers-game.js"></script>
