--- a/numbers-game.html
+++ b/numbers-game.html
@@ -7,26 +7,8 @@
 </head>
 <body>
 
-    <div id="game-board">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="title">2</div>
-    </div>
+    <div id="game-board"></div>
 
-<script src="js/numbers-game.js"></script>
+<script src="js/number-game.js" type="module"></script>
 </body>
 </html>
