Feat: adding jump function

--- a/internet-error-game.html
+++ b/internet-error-game.html
@@ -11,5 +11,6 @@
     <div id="block"></div>
 </div>
 <p>Score: <span id="scoreSpan"></span></p>
+<script src="js/internet-error-game.js"></script>
 </body>
 </html>
