Feat: adding check dead fucntion

--- a/internet-error-game.html
+++ b/internet-error-game.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" onclick="jump()">
 <head>
     <meta charset="UTF-8">
     <title>Jump Game</title>
@@ -11,6 +11,6 @@
     <div id="block"></div>
 </div>
 <p>Score: <span id="scoreSpan"></span></p>
-<script src="js/internet-error-game.js"></script>
 </body>
+<script src="js/internet-error-game.js"></script>
 </html>
